@startuml loan_engine_simplified_erd

entity "borrowers" as borrower {
  id : UUID <<PK>>
  --
  full_name : varchar(100)
  identity_number : varchar(20)
  phone_number : varchar(15)
  email : varchar(100)
  address : text
  date_of_birth : date
  occupation : varchar(50)
  monthly_income : decimal(15,2)
  bank_account_number : varchar(50)
  bank_name : varchar(100)
  account_holder_name : varchar(100)
  created_at : timestamp
  updated_at : timestamp
}

entity "loans" as loan {
  id : UUID <<PK>>
  --
  borrower_id : UUID <<FK>>
  principal_amount : decimal(15,2)
  interest_rate : decimal(5,2)
  roi_rate : decimal(5,2)
  loan_term_month : int
  current_state : enum('PROPOSED','APPROVED','INVESTED','DISBURSED', 'REJECTED')
  loan_agreement_pdf_url: text
  surveyor_employee_id : UUID <<FK>>
  survey_date : date
  field_visit_proof_url : text
  survey_notes : text
  approving_employee_id : UUID <<FK>>
  field_validator_employee_id : UUID <<FK>>
  approval_date : date
  approval_notes : text
  field_officer_employee_id : UUID <<FK>>
  disbursement_date : date
  signed_agreement_url : text
  disbursement_notes : text
  created_at : timestamp
  updated_at : timestamp
}

entity "investments" as investment {
  id : UUID <<PK>>
  --
  loan_id : UUID <<FK>>
  investor_id : UUID <<FK>>
  investment_amount : decimal(15,2)
  expected_return : decimal(15,2)
  investment_date : date
  agreement_signed : boolean
  agreement_signed_date : date
  created_at : timestamp
}

entity "employees" as employee {
  id : UUID <<PK>>
  --
  username : varchar(50)
  email : varchar(100)
  password_hash : varchar(255)
  full_name : varchar(100)
  phone_number : varchar(15)
  employee_role : enum('STAFF','SURVEYOR','FIELD_VALIDATOR','FIELD_OFFICER','ADMIN')
  department : varchar(50)
  is_active : boolean
  created_at : timestamp
  updated_at : timestamp
}

entity "investors" as investor {
  id : UUID <<PK>>
  --
  full_name : varchar(100)
  identity_number : varchar(20)
  email : varchar(100)
  phone_number : varchar(15)
  address : text
  bank_account : varchar(50)
  is_active : boolean
  created_at : timestamp
  updated_at : timestamp
}

entity "loan_state_histories" as state_history {
  id : UUID <<PK>>
  --
  loan_id : UUID <<FK>>
  changed_by_employee_id : UUID <<FK>>
  previous_state : varchar(50)
  new_state : varchar(50)
  change_reason : text
  changed_at : timestamp
}

borrower ||--o{ loan
loan ||--o{ investment
loan ||--o{ state_history
employee ||--o{ loan
investor ||--o{ investment

@enduml